[go/users] Add a feature that enables users to follow each other.
