# go/users/gen/http/openapi3.yaml
@@ -19,7 +19,7 @@ paths:
                         schema:
                             $ref: '#/components/schemas/DeleteUserRequestBody'
                         example:
-                            id: 9017040730249194932
+                            id: 2810239129742510560
             responses:
                 "200":
                     description: OK response.
@@ -47,8 +47,8 @@ paths:
                         schema:
                             $ref: '#/components/schemas/CreateUserRequestBody'
                         example:
-                            display_name: Facilis quidem quis at quod aspernatur quam.
-                            username: Sunt eos.
+                            display_name: Aspernatur quam repellat dolor laboriosam ut.
+                            username: Quidem quis at.
             responses:
                 "200":
                     description: OK response.
@@ -57,12 +57,12 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/User'
                             example:
-                                bio: Sed ad maiores aliquid.
-                                created_at: "1989-11-04T05:55:03Z"
-                                display_name: Inventore accusamus nesciunt eum blanditiis facere unde.
-                                id: 8190084971811879086
-                                updated_at: "2011-01-16T06:13:33Z"
-                                username: Laboriosam ut exercitationem qui.
+                                bio: Ad maiores aliquid neque accusamus tempore.
+                                created_at: "1999-08-02T01:32:35Z"
+                                display_name: Eum blanditiis facere unde dolor.
+                                id: 279637141475456824
+                                updated_at: "2011-11-02T19:28:26Z"
+                                username: Error inventore accusamus.
                 "400":
                     description: 'BadRequest: Bad Request response.'
                     content:
@@ -81,9 +81,9 @@ paths:
                   required: true
                   schema:
                     type: integer
-                    example: 853124055273952537
+                    example: 4703302081872238694
                     format: int64
-                  example: 8802437498500106118
+                  example: 6299968532845105888
             responses:
                 "200":
                     description: OK response.
@@ -92,12 +92,12 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/User'
                             example:
-                                bio: Praesentium similique nisi sit.
-                                created_at: "2009-01-30T19:11:58Z"
-                                display_name: Iure id autem.
-                                id: 3629941483923070434
-                                updated_at: "1995-01-24T21:37:42Z"
-                                username: Ut possimus.
+                                bio: Minus eaque tempora in laborum.
+                                created_at: "1993-06-18T08:42:53Z"
+                                display_name: Praesentium similique nisi sit.
+                                id: 4697244773142397205
+                                updated_at: "1980-10-18T14:25:17Z"
+                                username: Veniam iure id autem.
                 "404":
                     description: 'NotFound: Not Found response.'
                     content:
@@ -116,9 +116,9 @@ paths:
                   required: true
                   schema:
                     type: integer
-                    example: 5171046760854731574
+                    example: 1237231028843673176
                     format: int64
-                  example: 378701858343614778
+                  example: 3175780163654343168
             requestBody:
                 required: true
                 content:
@@ -126,7 +126,7 @@ paths:
                         schema:
                             $ref: '#/components/schemas/UpdateBioRequestBody'
                         example:
-                            bio: Laudantium corrupti beatae fuga corrupti.
+                            bio: Voluptas nobis omnis.
             responses:
                 "200":
                     description: OK response.
@@ -154,9 +154,9 @@ paths:
                   required: true
                   schema:
                     type: integer
-                    example: 5622424820143763188
+                    example: 395274392950160444
                     format: int64
-                  example: 7956233771881647359
+                  example: 6966835270155161708
             requestBody:
                 required: true
                 content:
@@ -164,7 +164,7 @@ paths:
                         schema:
                             $ref: '#/components/schemas/UpdateUsernameRequestBody'
                         example:
-                            username: Et error quo vero nesciunt quo voluptate.
+                            username: Odit et omnis placeat similique voluptatem id.
             responses:
                 "200":
                     description: OK response.
@@ -176,6 +176,53 @@ paths:
                                 $ref: '#/components/schemas/Error'
                 "404":
                     description: 'NotFound: Not Found response.'
+                    content:
+                        application/vnd.goa.error:
+                            schema:
+                                $ref: '#/components/schemas/Error'
+    /api/users/follow:
+        delete:
+            tags:
+                - users
+            summary: Unfollow users
+            operationId: users#Unfollow
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/FollowRequestBody'
+                        example:
+                            followee_id: 6202834779766302284
+                            follower_id: 4698722160625222812
+            responses:
+                "200":
+                    description: OK response.
+                "400":
+                    description: 'BadRequest: Bad Request response.'
+                    content:
+                        application/vnd.goa.error:
+                            schema:
+                                $ref: '#/components/schemas/Error'
+        post:
+            tags:
+                - users
+            summary: Follow users
+            operationId: users#Follow
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/FollowRequestBody'
+                        example:
+                            followee_id: 8492160358191620196
+                            follower_id: 6881001417419968319
+            responses:
+                "200":
+                    description: OK response.
+                "400":
+                    description: 'BadRequest: Bad Request response.'
                     content:
                         application/vnd.goa.error:
                             schema:
@@ -196,13 +243,13 @@ components:
             properties:
                 display_name:
                     type: string
-                    example: Esse et nesciunt non dolor laboriosam.
+                    example: Saepe dolorem dolorum facere omnis.
                 username:
                     type: string
-                    example: Qui sint sapiente corporis.
+                    example: Accusamus eum est ipsam placeat.
             example:
-                display_name: Quos voluptas qui aspernatur.
-                username: Itaque pariatur ipsam molestias ipsam aut.
+                display_name: Veritatis saepe sit soluta amet eos autem.
+                username: Repellendus ipsum perferendis ipsum non.
             required:
                 - username
                 - display_name
@@ -211,10 +258,10 @@ components:
             properties:
                 id:
                     type: integer
-                    example: 1288073891153681460
+                    example: 5825090350270624949
                     format: int64
             example:
-                id: 8448143939769264812
+                id: 3392079364039272528
             required:
                 - id
         Error:
@@ -223,7 +270,7 @@ components:
                 fault:
                     type: boolean
                     description: Is the error a server-side fault?
-                    example: false
+                    example: true
                 id:
                     type: string
                     description: ID is a unique identifier for this particular occurrence of the problem.
@@ -245,11 +292,11 @@ components:
                     description: Is the error a timeout?
                     example: false
             example:
-                fault: false
+                fault: true
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: false
+                temporary: true
                 timeout: false
             required:
                 - name
@@ -258,14 +305,31 @@ components:
                 - temporary
                 - timeout
                 - fault
+        FollowRequestBody:
+            type: object
+            properties:
+                followee_id:
+                    type: integer
+                    example: 7062099314157344595
+                    format: int64
+                follower_id:
+                    type: integer
+                    example: 8316079895195226046
+                    format: int64
+            example:
+                followee_id: 3701092369318947588
+                follower_id: 8608922527124215505
+            required:
+                - follower_id
+                - followee_id
         UpdateBioRequestBody:
             type: object
             properties:
                 bio:
                     type: string
-                    example: Distinctio vel harum omnis necessitatibus temporibus.
+                    example: Itaque nulla eligendi inventore.
             example:
-                bio: Vero ut at nostrum dolorem odit recusandae.
+                bio: Ut numquam.
             required:
                 - bio
         UpdateUsernameRequestBody:
@@ -273,9 +337,9 @@ components:
             properties:
                 username:
                     type: string
-                    example: Recusandae qui commodi ipsa ducimus expedita.
+                    example: Repellat praesentium enim est qui.
             example:
-                username: Quis in explicabo.
+                username: Enim consequatur saepe adipisci.
             required:
                 - username
         User:
@@ -283,32 +347,32 @@ components:
             properties:
                 bio:
                     type: string
-                    example: Accusamus eum est ipsam placeat.
+                    example: Tenetur autem rerum.
                 created_at:
                     type: string
-                    example: "2011-02-16T01:02:10Z"
+                    example: "1975-04-08T13:01:07Z"
                     format: date-time
                 display_name:
                     type: string
-                    example: Laudantium expedita hic quos.
+                    example: Mollitia repellendus.
                 id:
                     type: integer
-                    example: 420120022597800938
+                    example: 1345625246019500489
                     format: int64
                 updated_at:
                     type: string
-                    example: "2010-04-12T00:59:33Z"
+                    example: "1972-03-02T21:46:49Z"
                     format: date-time
                 username:
                     type: string
-                    example: Dolores laborum architecto fugiat omnis iusto.
+                    example: Ea animi.
             example:
-                bio: Fugit recusandae qui.
-                created_at: "1979-08-17T13:14:08Z"
-                display_name: Modi velit voluptatem.
-                id: 3923114272923499382
-                updated_at: "1994-05-19T02:44:38Z"
-                username: Qui nesciunt ullam ipsam officia.
+                bio: Magni perspiciatis distinctio neque esse at corporis.
+                created_at: "1975-11-03T05:35:47Z"
+                display_name: Mollitia modi harum qui omnis sapiente ad.
+                id: 4941914734583634128
+                updated_at: "1997-08-26T16:04:02Z"
+                username: Tempora veritatis ratione.
             required:
                 - id
                 - username
